début partie fonctionnement

--- a/index.html
+++ b/index.html
@@ -18,6 +18,25 @@
             </div>
             <section class="explor">
                 <h1>Réservez le menu qui vous convient</h1>
+                <p>Découvrez des restaurants d'exception, sélectionnés par nos soins</p>
+                <button class="explor__btn">Explorer nos restaurants</button>
+            </section>
+            <section class="process">
+            <h1 class="process__title">Fonctionnement</h1>
+            <ol class="process__list">
+                <li class="process__steps">
+                    <i class="fas fa-mobile-alt process__icon"></i>
+                    <span>Choisissez un restaurant</span>
+                </li>
+                <li class="process__steps">
+                    <i class="fas fa-list-ul process__icon"></i>
+                    <span>Composez votre menu</span>
+                </li>
+                <li class="process__steps">
+                    <i class="fas fa-store process__icon"></i>
+                    <span>Dégustez au restaurant</span>
+                </li>
+            </ol>
             </section>
         </main>
     </body>
