ajout section restaurant, et premiere carte

--- a/index.html
+++ b/index.html
@@ -25,18 +25,39 @@
             <h1 class="process__title">Fonctionnement</h1>
             <ol class="process__list">
                 <li class="process__steps">
+                    <span class="process__number">1</span>
                     <i class="fas fa-mobile-alt process__icon"></i>
                     <span>Choisissez un restaurant</span>
                 </li>
                 <li class="process__steps">
+                    <span class="process__number">2</span>
                     <i class="fas fa-list-ul process__icon"></i>
                     <span>Composez votre menu</span>
                 </li>
                 <li class="process__steps">
+                    <span class="process__number">3</span>
                     <i class="fas fa-store process__icon"></i>
                     <span>Dégustez au restaurant</span>
                 </li>
             </ol>
+            </section>
+            <section class="restaurants">
+                <h1 class="restaurants__title">Restaurants</h1>
+                <div class="restaurants__list">
+                    <a class="carte" href="#">
+                        <img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" class="carte__img" alt="La Palette du goût - Ménilmontant">
+                        <span class="carte__badge">Nouveau</span>
+                        <div class="carte__footer">
+                            <div class="carte__txt">
+                                <h2 class="carte__title">La palette du goût</h2>
+                                <span class="carte__subtitle">Ménilmontant</span>
+                            </div>
+                            <div class="carte__fav">
+                                <i class="far fa-heart"></i>
+                            </div>
+                        </div>
+                    </a>
+                </div>
             </section>
         </main>
     </body>
