--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="./.public/style/style.css">
+        <link rel="stylesheet" href="./public/style/style.css">
         <script src="https://kit.fontawesome.com/18190013bf.js" crossorigin="anonymous"></script>
         <title>OhMyFood</title>
     </head>
