--- a/index.html
+++ b/index.html
@@ -57,8 +57,61 @@
                             </div>
                         </div>
                     </a>
+                    <a class="carte" href="#">
+                        <img src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" class="carte__img" alt="La note enchantée - Charonne">
+                        <span class="carte__badge">Nouveau</span>
+                        <div class="carte__footer">
+                            <div class="carte__txt">
+                                <h2 class="carte__title">La note enchantée</h2>
+                                <span class="carte__subtitle">Charonne</span>
+                            </div>
+                            <div class="carte__fav">
+                                <i class="far fa-heart"></i>
+                            </div>
+                        </div>
+                    </a>
+                    <a class="carte" href="#">
+                        <img src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" class="carte__img" alt="A la française - Cité Rouge">
+                        <div class="carte__footer">
+                            <div class="carte__txt">
+                                <h2 class="carte__title">A la française</h2>
+                                <span class="carte__subtitle">Cité Rouge</span>
+                            </div>
+                            <div class="carte__fav">
+                                <i class="far fa-heart"></i>
+                            </div>
+                        </div>
+                    </a>
+                    <a class="carte" href="#">
+                        <img src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" class="carte__img" alt="Le délice des sens - Folie-Méricourt">
+                        <div class="carte__footer">
+                            <div class="carte__txt">
+                                <h2 class="carte__title">Le délice des sens</h2>
+                                <span class="carte__subtitle">Folie-Méricourt</span>
+                            </div>
+                            <div class="carte__fav">
+                                <i class="far fa-heart"></i>
+                            </div>
+                        </div>
+                    </a>
                 </div>
             </section>
+            <footer class="footer">
+                <img src="images/logo/ohmyfood@2x.svg" alt="ohmyfood-logo" class="footer__logo footer__logo--invert">
+                <div class="footer__link">
+                    <i class="fas fa-utensils"></i>
+                    <span>Proposer un restaurant</span>
+                    <br><br>
+                    <i class="fas fa-hands-helping"></i>
+                    <span>Devenir partenaire</span>
+                    <br>
+                    <br>
+                    <span>Mention légales</span>
+                    <br>
+                    <br>
+                    <span>Contact</span>
+                </div>
+            </footer>
         </main>
     </body>
 </html>
