creation des pages html menus

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <div class="container">
                     <h2 class="restaurants__title">Restaurants</h2>
                     <div class="restaurants__list">
-                        <a class="carte" href="#">
+                        <a class="carte" href="./menu_la_palette_du_gout.html">
                             <img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" class="carte__img" alt="La Palette du goût - Ménilmontant">
                             <span class="carte__badge">Nouveau</span>
                             <div class="carte__footer">
@@ -60,7 +60,7 @@
                                 </div>
                             </div>
                         </a>
-                        <a class="carte" href="#">
+                        <a class="carte" href="./menu_la_note_enchantee.html">
                             <img src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" class="carte__img" alt="La note enchantée - Charonne">
                             <span class="carte__badge">Nouveau</span>
                             <div class="carte__footer">
@@ -73,7 +73,7 @@
                                 </div>
                             </div>
                         </a>
-                        <a class="carte" href="#">
+                        <a class="carte" href="./menu_a_la_francaise.html">
                             <img src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" class="carte__img" alt="A la française - Cité Rouge">
                             <div class="carte__footer">
                                 <div class="carte__txt">
@@ -85,7 +85,7 @@
                                 </div>
                             </div>
                         </a>
-                        <a class="carte" href="#">
+                        <a class="carte" href="./menu_le_délice_des_sens.html">
                             <img src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" class="carte__img" alt="Le délice des sens - Folie-Méricourt">
                             <div class="carte__footer">
                                 <div class="carte__txt">
