--- a/menu_le_délice_des_sens.html
+++ b/menu_le_délice_des_sens.html
@@ -30,31 +30,24 @@
                         </div>
                         <div class="plats__item">
                             <div class="item">
-                                <h4 class="item__title">Raviole de foie gras</h4>
-                                <p class="item__description">Accompagnés de leur crème à la truffe</p>
+                                <h4 class="item__title">Tartare de thon</h4>
+                                <p class="item__description">Assaisonné au yuzu</p>
                             </div>
                             <div class="item__price">25€</div>
                         </div>
                         <div class="plats__item">
                             <div class="item">
-                                <h4 class="item__title">Caviar osciètre</h4>
-                                <p class="item__description">Sur blini à la farine de blé noir</p>
+                                <h4 class="item__title">Bouchée de homard croustillant</h4>
+                                <p class="item__description">Et sa farandole de petits légumes</p>
                             </div>
                             <div class="item__price">35€</div>
                         </div>
                         <div class="plats__item">
                             <div class="item">
-                                <h4 class="item__title">Homard et espuma de potiron</h4>
-                                <p class="item__description">Mariné aux zestes d'orange</p>
+                                <h4 class="item__title">Velouté de cèpes</h4>
+                                <p class="item__description">Aux truffes</p>
                             </div>
                             <div class="item__price">20€</div>
-                        </div>
-                        <div class="plats__item">
-                            <div class="item">
-                                <h4 class="item__title">Foie gras de canard cuit entier</h4>
-                                <p class="item__description">Confiture de figue et pain toasté</p>
-                            </div>
-                            <div class="item__price">35€</div>
                         </div>
                     </div>
                     <div class="plats">
@@ -63,22 +56,22 @@
                         </div>
                         <div class="plats__item">
                             <div class="item">
-                                <h4 class="item__title">Noix de coquilles Saint-Jacques</h4>
-                                <p class="item__description">Sur lit de purée de céleri-rave</p>
+                                <h4 class="item__title">Poulet rôti aux herbes de Provence</h4>
+                                <p class="item__description">Et sa crème de truffe</p>
                             </div>
                             <div class="item__price">40€</div>
                         </div>
                         <div class="plats__item">
                             <div class="item">
-                                <h4 class="item__title">Langoustine poêlée</h4>
-                                <p class="item__description">Purée de patate douce</p>
+                                <h4 class="item__title">Langouste rôtie</h4>
+                                <p class="item__description">Et ses légumes de saison</p>
                             </div>
                             <div class="item__price">35€</div>
                         </div>
                         <div class="plats__item">
                             <div class="item">
-                                <h4 class="item__title">Mijoté de queue de boeuf </h4>
-                                <p class="item__description">Et riz sauvage aux zestes de citron</p>
+                                <h4 class="item__title">Côte de boeuf Angus</h4>
+                                <p class="item__description">Et sa purée de panais</p>
                             </div>
                             <div class="item__price">44€</div>
                         </div>
@@ -89,22 +82,22 @@
                         </div>
                         <div class="plats__item">
                             <div class="item">
-                                <h4 class="item__title">Macaron noisette et chocolat</h4>
-                                <p class="item__description">Glace au caramel brun et sel de Guérande</p>
+                                <h4 class="item__title">Farandole de desserts</h4>
+                                <p class="item__description">Du chef</p>
                             </div>
                             <div class="item__price">18€</div>
                         </div>
                         <div class="plats__item">
                             <div class="item">
-                                <h4 class="item__title">Baba au rhum revisité </h4>
-                                <p class="item__description">Avec son coulis de citron</p>
+                                <h4 class="item__title">Crème brulée </h4>
+                                <p class="item__description">Revisitée</p>
                             </div>
                             <div class="item__price">22€</div>
                         </div>
                         <div class="plats__item">
                             <div class="item">
-                                <h4 class="item__title">Tarte au citron meringuée</h4>
-                                <p class="item__description">Déstructurée</p>
+                                <h4 class="item__title">Tiramisu </h4>
+                                <p class="item__description">À la noisette</p>
                             </div>
                             <div class="item__price">23€</div>
                         </div>
