--- a/menu_a_la_francaise.html
+++ b/menu_a_la_francaise.html
@@ -20,7 +20,7 @@
             <img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La Palette du goût - Ménilmontant" class="menu__img">
             <div class="menu">
                 <div class="menu__header">
-                    <h2 class="menu__h2--margin">La note enchantée</h2>
+                    <h2 class="menu__h2--margin">À la française</h2>
                     <i class="far fa-heart carte__fav--size"></i>
                 </div>
                 <div class="menu__content">
@@ -30,31 +30,24 @@
                         </div>
                         <div class="plats__item">
                             <div class="item">
-                                <h4 class="item__title">Raviole de foie gras</h4>
-                                <p class="item__description">Accompagnés de leur crème à la truffe</p>
+                                <h4 class="item__title">Tartare de poulpe acidulé</h4>
+                                <p class="item__description">Aux zestes d'orange</p>
                             </div>
                             <div class="item__price">25€</div>
                         </div>
                         <div class="plats__item">
                             <div class="item">
-                                <h4 class="item__title">Caviar osciètre</h4>
-                                <p class="item__description">Sur blini à la farine de blé noir</p>
+                                <h4 class="item__title">Velouté de légumes d'antan</h4>
+                                <p class="item__description">Carotte, panais, topinambour</p>
                             </div>
                             <div class="item__price">35€</div>
                         </div>
                         <div class="plats__item">
                             <div class="item">
-                                <h4 class="item__title">Homard et espuma de potiron</h4>
-                                <p class="item__description">Mariné aux zestes d'orange</p>
+                                <h4 class="item__title">Soupe à l'oignon</h4>
+                                <p class="item__description">Revisitée</p>
                             </div>
                             <div class="item__price">20€</div>
-                        </div>
-                        <div class="plats__item">
-                            <div class="item">
-                                <h4 class="item__title">Foie gras de canard cuit entier</h4>
-                                <p class="item__description">Confiture de figue et pain toasté</p>
-                            </div>
-                            <div class="item__price">35€</div>
                         </div>
                     </div>
                     <div class="plats">
@@ -63,22 +56,22 @@
                         </div>
                         <div class="plats__item">
                             <div class="item">
-                                <h4 class="item__title">Noix de coquilles Saint-Jacques</h4>
-                                <p class="item__description">Sur lit de purée de céleri-rave</p>
+                                <h4 class="item__title">Coquilles Saint-Jacques</h4>
+                                <p class="item__description">Accompagnées d'une purée de panais</p>
                             </div>
                             <div class="item__price">40€</div>
                         </div>
                         <div class="plats__item">
                             <div class="item">
-                                <h4 class="item__title">Langoustine poêlée</h4>
-                                <p class="item__description">Purée de patate douce</p>
+                                <h4 class="item__title">Magret de canard</h4>
+                                <p class="item__description">Et parmentier de pommes de terre</p>
                             </div>
                             <div class="item__price">35€</div>
                         </div>
                         <div class="plats__item">
                             <div class="item">
-                                <h4 class="item__title">Mijoté de queue de boeuf </h4>
-                                <p class="item__description">Et riz sauvage aux zestes de citron</p>
+                                <h4 class="item__title">Pigeonneau d’Ille-et-Vilaine</h4>
+                                <p class="item__description">Sur son lit de gnocchis aux légumes</p>
                             </div>
                             <div class="item__price">44€</div>
                         </div>
@@ -89,22 +82,22 @@
                         </div>
                         <div class="plats__item">
                             <div class="item">
-                                <h4 class="item__title">Macaron noisette et chocolat</h4>
-                                <p class="item__description">Glace au caramel brun et sel de Guérande</p>
+                                <h4 class="item__title">Pétales de violettes glacés</h4>
+                                <p class="item__description">Et purée de noisettes</p>
                             </div>
                             <div class="item__price">18€</div>
                         </div>
                         <div class="plats__item">
                             <div class="item">
-                                <h4 class="item__title">Baba au rhum revisité </h4>
-                                <p class="item__description">Avec son coulis de citron</p>
+                                <h4 class="item__title">Fondant au chocolat</h4>
+                                <p class="item__description">Revisité</p>
                             </div>
                             <div class="item__price">22€</div>
                         </div>
                         <div class="plats__item">
                             <div class="item">
-                                <h4 class="item__title">Tarte au citron meringuée</h4>
-                                <p class="item__description">Déstructurée</p>
+                                <h4 class="item__title">Millefeuille croustillant</h4>
+                                <p class="item__description">Myrtilles et pâte d’amande</p>
                             </div>
                             <div class="item__price">23€</div>
                         </div>
