modif photo sur page menu

--- a/menu_le_délice_des_sens.html
+++ b/menu_le_délice_des_sens.html
@@ -17,7 +17,7 @@
         </div>
         </header>
         <main>
-            <img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La Palette du goût - Ménilmontant" class="menu__img">
+            <img src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="La note enchantée - Folie-Méricourt" class="menu__img">
             <div class="menu">
                 <div class="menu__header">
                     <h2 class="menu__h2--margin">La note enchantée</h2>
