--- a/menu_a_la_francaise.html
+++ b/menu_a_la_francaise.html
@@ -17,7 +17,7 @@
         </div>
         </header>
         <main>
-            <img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La Palette du goût - Ménilmontant" class="menu__img">
+            <img src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="À la française - Cité Rouge" class="menu__img">
             <div class="menu">
                 <div class="menu__header">
                     <h2 class="menu__h2--margin">À la française</h2>
